# finance-tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  cache.go  components.json  config.example.yaml  date.go  devenv.nix  dockerfile  go.mod  go.sum  justfile  main.go  notifications.go  openrouter.go  package-lock.json  package.json  simplefin.go  supervisor.conf  tailwind.config.js  test_migration.sh  test_simplefin.go  tsconfig.json  vite.config.ts  zellij-layout.kdl
.github/: PULL_REQUEST_TEMPLATE.md
.github/k6/: load-test.js
.github/workflows/: README.md  build.yaml  cd.yaml  database-migrations.yml  deploy-backend.yml  deploy-frontend.yml  deploy-landing.yml  docker.yaml  release.yaml  test-and-lint.yml  tests.yaml
assets/views/: email.mjml
backlog/: config.yml
backlog/docs/: llm-analysis-improvements.md
backlog/tasks/: task-1 - Improve-LLM-analysis-quality-for-notifications.md  task-10 - Include-transaction-dates-in-Top-10-Largest-Expenses.md  task-11 - Remove-cache-mechanism-and-always-send-notifications.md  task-2 - Add-multi-month-analysis-support.md  task-3 - Use-better-free-models-to-fix-rate-limiting.md  task-4 - Enhance-alert-output-with-more-detailed-financial-insights.md  task-5 - Fix-API-error-handling-to-use-separate-ntfy-warning-channel.md  task-6 - Refactor-ntfy-warning-notifications-to-use-suffix-instead-of-separate-topic.md  task-7 - Upgrade-all-dependencies-to-latest-versions.md  task-8 - Add-option-to-analyze-only-credit-card-accounts.md  task-9 - Calculate-and-include-daily-burn-rate-in-AI-analysis.md
config/: development.yaml  test.yaml
docs/: API.md  ARCHITECTURE.md  BRANDING.md  CATEGORIZATION_ENGINE.md  DATABASE.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  FEATURES.md  INERTIA_SETUP.md  PRODUCT.md  ROADMAP.md  SUPABASE_SETUP.md
examples/: playground.rs
landing/: README.md  _headers  index.html
llm/: Cargo.toml
llm/examples/: anthropic_example.rs  deepseek_example.rs  evaluation_example.rs  google_example.rs  groq_example.rs  multi_backend_example.rs  ollama_example.rs  openai_example.rs  phind_example.rs  tool_calling_example.rs  validator_example.rs  xai_example.rs
llm/src/api/: handlers.rs
migration/src/: lib.rs  m20250209_133336_create_organizations_table.rs  m20250209_133407_create_accounts_table.rs  m20250209_134344_create_transactions_table.rs
resources/css/: app.css
resources/js/: app.tsx
resources/js/Components/: JobMonitor.tsx  SyncButton.tsx
resources/js/Layouts/: AuthenticatedLayout.tsx
resources/js/components/: AIChat.tsx  AIInsights.tsx  JobMonitor.tsx  SyncButton.tsx  TransactionDetail.tsx
resources/js/types/: index.ts
simplefin-bridge/: Cargo.toml
simplefin-bridge/src/: lib.rs  models.rs
src/: app.rs  args.rs  cache.go  cache.rs  cmd_sync.go.bak  cmd_sync_river.go.bak  cmd_web.go  cmd_worker.go  date.go  db.go  error.rs  helpers.go  llm.go  llm.rs  llm_response.rs  main.go  main.rs  models.go  notifications.go  notifications.rs  openrouter.go  settings.go  settings.rs  simplefin.go  transactions.rs  version.go
src/common/: settings.rs
src/controllers/: accounts.rs  mod.rs  transactions.rs
src/internal/auth/: middleware.go
src/internal/config/: inertia.go  supabase.go
src/internal/jobs/: categorization_jobs.go  client.go  client.go.bak  river_client.go  river_jobs.go  types.go  workers.go.bak
src/internal/models/: categorization.go  jobs.go  models.go  types.go
src/internal/services/: account.go  ai_service.go  analytics.go  category.go  connection.go  crypto.go  jobs.go  organization.go  organization_mock.go  (+7 more)
src/mailers/: mod.rs  summarize.rs
src/models/: accounts.rs  mod.rs  organizations.rs  transactions.rs
src/providers/: interface.go.bak  provider.go
src/tasks/: categorize.rs  mod.rs  summarize.rs  sync.rs  sync_data.rs
src/views/: accounts.rs  transactions.rs
src/web/: server.go
supabase/: config.toml
supabase/migrations/: 20240103000000_initial_schema.sql  20240103000001_fix_rls_policies.sql  20240103000003_auto_create_organization.sql  20240103000004_auth_user_trigger.sql  20240103000005_fix_infinite_recursion.sql  20240104000000_river_jobs.sql  20250603000000_add_job_queue.sql  20250603000001_add_river_jobs.sql  20250604000000_categorization_engine.sql
templates/: email.mjml
tests/models/: mod.rs  organizations.rs  users.rs
tests/requests/: auth.rs  prepare_data.rs
tests/tasks/: mod.rs  seed.rs  sync_data.rs
tests/workers/: mod.rs  sync_data.rs
ui/: next.config.ts  package-lock.json
ui/app/: layout.tsx
(+60 files in other folders)
