[workspace]

[package]
name = "finance-tracker"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "finance-tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplefin-bridge = { path = "./simplefin-bridge" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.86"
tokio = { version = "1.43.0", default-features = false }
tracing = "0.1.41"
chrono = "0.4"
fluent-templates = { version = "0.13.0", features = ["tera"] }
unic-langid = "0.9.5"
dotenv = "0.15.0"
thiserror = "1.0"
url = "2.5.4"
prettytable-rs = "0.10.0"
rust_decimal = "1.36.0"
llm = { version = "1.0.7", features = ["openai", "anthropic", "ollama", "deepseek", "xai", "phind", "google", "groq", "api"] }
reqwest = "0.12.12"
chrono-tz = "0.10.1"
mrml = "4.0.1"
tabled = "0.18.0"
envconfig = "0.11.0"
indicatif = "0.17"
console = "0.15"
anyhow = "1.0"

[[bin]]
name = "finance-tracker"
path = "src/main.rs"
required-features = []
