[workspace]

[package]
name = "finance-tracker"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "finance-tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplefin-bridge = { path = "./simplefin-bridge" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", default-features = false }
chrono = "0.4"
dotenv = "0.15.0"
thiserror = "1.0"
url = "2.5.4"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
mrml = "4.0.1"
tabled = "0.18.0"
envconfig = "0.11.0"
indicatif = "0.17"
console = "0.15"
anyhow = "1.0"
tera = "1.20.0"
clap = { version = "4.4", features = ["derive"] }
pulldown-cmark = "0.12.2"
lettre = { version = "0.11.12", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
rust_decimal = "1.36.0"


[[bin]]
name = "finance-tracker"
path = "src/main.rs"
required-features = []
