[package]
name = "simplefin-bridge"
version = "0.0.1"
authors = ["Eric Minassian <eric@ericminassian.com>"]
description = "SimpleFIN Bridge SDK"
license = "MIT"
readme = "README.md"
repository = "https://github.com/eric-minassian/simplefin-bridge"
keywords = ["simplefin", "bridge", "sdk"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
url = "2.5"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.11"
rust_decimal = "1.36.0"

[dev-dependencies]
chrono = "0.4.39"
