[package]
name = "simplefin-bridge"
version = "0.0.1"
authors = ["Eric Minassian <eric@ericminassian.com>"]
description = "SimpleFIN Bridge SDK"
license = "MIT"
readme = "README.md"
repository = "https://github.com/eric-minassian/simplefin-bridge"
keywords = ["simplefin", "bridge", "sdk"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.14", default-features = false, features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5"
tokio = { version = "1.44.1", features = ["full"] }
thiserror = "2.0.12"
rust_decimal = "1.36.0"

[dev-dependencies]
chrono = "0.4.40"
